<resources>
    <string name="app_name">The Ripple Effect</string>
    <string name="title_activity_location">Location</string>
    <string name="username">E-mail</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_log_in">Or, Log In</string>
    <string name="or_sign_up">Or, Sign Up</string>
    <string name="guest">Enter as guest</string>
    <string name="user_id_image">User ID image</string>
    <string name="loggedIn">Logged In Successfully, welcome</string>
    <string name="failed_log_in"> Failed to log in\nplease check your username or password</string>
    <string name="signed_up">Signed Up Successfully, welcome</string>
    <string name="failed_sign_up"> Failed to sign up\nplease check your username or password</string>
    <string name="my_profile">Profile</string>
    <string name="log_out"> Log out</string>
    <string name="create_new_puddle">Form a new puddle</string>
    <string name="create_new_ripple">Create a new ripple</string>
    <string name="puddle_name">Puddle title: </string>
    <string name="puddle_initiator_name">Initiator name: </string>
    <string name="Quest">Quest:  </string>
    <string name="Accept">Accept</string>
    <string name="status">Status: </string>
    <string name="Location">Location: </string>
    <string name="date_created">Date created: </string>
    <string name="type">Type: </string>
    <string name="Finish">Finish</string>
    <string name="Ongoing">Ongoing</string>
    <string name="Finished">Finished</string>
    <string name="ripples_required">Ripples required: </string>
    <string name="ripples_created">Ripples created: </string>
    <string name="Credibility">Credibility: </string>
    <string name="boost_credibility">Encourage</string>
    <string name="credibility_boosts"> Credibility boosts: </string>
    <string name="report_as_scam">Report</string>
    <string name="scam_reports">Scam reports: </string>
    <string name="image"> Images: </string>
    <string name="detail">Details</string>
    <string name="my_puddles">My puddles</string>
    <string name="my_ripples">My ripples</string>
    <string name="add_location">Add location</string>
    <string name="view_location"> Location</string>
    <string name="details">Details: </string>
    <string name="my_activity">My activity</string>
    <string name="edit">Edit</string>
    <string name="country">Country: </string>
    <string name="City">City: </string>
    <string name="add_image">Add images</string>
    <string name="no_name">Add the puddle name </string>
    <string name="no_quest">Add the puddle quest </string>
    <string name="no_country">Add the puddle country location </string>
    <string name="no_city">Add the puddle city location </string>
    <string name="no_ripples">Add the puddle required ripples </string>
    <string name="no_type">Add the puddle type </string>
    <string name="no_status">Add the puddle status </string>
    <string name="no_details">Add the puddles details </string>
    <string name="no_function"> This feature will be added in future update</string>

    <string name="puddleNameKey">PNK</string>
    <string name="initiatorKey">INK</string>
    <string name="questKey">QDK</string>
    <string name="countryKey">CoLK</string>
    <string name="cityKey">CiLK</string>
    <string name="reqRipplesKey">RRK</string>
    <string name="createdRipplesKey">RCK</string>
    <string name="typeKey">TDK</string>
    <string name="statusKey">SDK</string>
    <string name="credibilityKey">CBK</string>
    <string name="reportsKey">RSK</string>
    <string name="detailsKey">DDK</string>
    <string name="dateKey">DCK</string>
    <string name="title_activity_maps">Map</string>


</resources>
