<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestWriteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_puddle_title_label"
                style="@style/label_style"
                android:text="@string/puddle_name" />

            <EditText
                android:id="@+id/edit_puddle_name_text"
                style="@style/text_style"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_date_label"
                style="@style/label_style"
                android:text="@string/date_created" />

            <EditText
                android:id="@+id/date_edit_text"
                style="@style/text_style"
                android:inputType="datetime" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_initiator_name_title"
                style="@style/label_style"
                android:text="@string/puddle_initiator_name" />

            <EditText
                android:id="@+id/edit_initiator_name_text"
                style="@style/text_style" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_quest_label"
                style="@style/label_style"
                android:text="@string/Quest"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="222dp" />

            <EditText
                android:id="@+id/edit_quest_text"
                style="@style/text_style" />
        </LinearLayout>


        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/write_location_country_label"
                style="@style/label_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/country" />

            <EditText
                android:id="@+id/edit_location_country_text"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_weight="1.5" />

            <TextView
                android:id="@+id/write_location_city_label"
                style="@style/label_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/City" />

            <EditText
                android:id="@+id/edit_location_city_text"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_weight="1.5" />


        </LinearLayout>

        <Button
            android:id="@+id/view_location_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_location"
            android:textSize="12sp" />

        <LinearLayout style="@style/linear_layout_style">


            <TextView
                android:id="@+id/write_number_created_label"
                style="@style/label_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/ripples_created" />

            <EditText
                android:id="@+id/edit_no_ripples_created_text"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:inputType="number" />


            <TextView
                android:id="@+id/write_number_required_label"
                style="@style/label_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/ripples_required" />

            <EditText
                android:id="@+id/edit_no_required_ripple_text"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_type_label"
                style="@style/label_style"
                android:text="@string/type"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="539dp" />

            <EditText
                android:id="@+id/edit_type_text"
                style="@style/text_style" />
        </LinearLayout>


        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_status_label"
                style="@style/label_style"
                android:text="@string/status"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="117dp" />

            <EditText
                android:id="@+id/edit_Status_text"
                style="@style/text_style" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_credibility_label"
                style="@style/label_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/credibility_boosts" />

            <EditText
                android:id="@+id/edit_credibility_text"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:inputType="number" />

            <TextView
                android:id="@+id/write_reports_label"
                style="@style/label_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/scam_reports" />

            <EditText
                android:id="@+id/edit_reports_text"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/write_details_label"
                style="@style/label_style"
                android:text="@string/details"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_details_text"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:maxLength="250"
                android:maxLines="5"
                android:paddingStart="5dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                tools:text="lgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkg" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/write_images_label"
                style="@style/label_style"
                android:text="@string/image"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/common_google_signin_btn_text_light">

                </ImageView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/common_google_signin_btn_text_light">

                </ImageView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/common_google_signin_btn_text_light">

                </ImageView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/boost_credibility_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boost_credibility" />

            <Button
                android:id="@+id/accept_quest_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Accept" />

            <Button
                android:id="@+id/report_spam_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_image" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>