<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestWriteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_puddle_title_label"
                style="@style/label_style"
                android:text="@string/puddle_name" />

            <TextView
                android:id="@+id/puddle_name_text"
                style="@style/label_style"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_date_label"
                style="@style/label_style"
                android:text="@string/date_created" />

            <TextView
                android:id="@+id/date_text"
                style="@style/label_style" />
        </LinearLayout>
        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_initiator_name_title"
                style="@style/label_style"
                android:text="@string/puddle_initiator_name" />

            <TextView
                android:id="@+id/initiator_name_text"
                style="@style/label_style"/>


        </LinearLayout>
        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_quest_label"
                style="@style/label_style"
                android:text="@string/Quest"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="222dp" />

            <TextView
                android:id="@+id/quest_text"
                style="@style/label_style"
                android:layout_weight="4" />
        </LinearLayout>


        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/read_location_country_label"
                style="@style/label_style"
                android:text="@string/country" />

            <TextView
                android:id="@+id/read_location_country_text"
                style="@style/label_style" />

            <TextView
                android:id="@+id/read_location_city_label"
                style="@style/label_style"
                android:text="@string/City" />

            <TextView
                android:id="@+id/read_location_city_text"
                style="@style/label_style" />


        </LinearLayout>
        <Button
            android:id="@+id/view_location_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/view_location"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"/>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_number_created_label"
                style="@style/label_style"
                android:text="@string/number_of_ripples_created"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="356dp" />

            <TextView
                android:id="@+id/no_ripples_created_text"
                style="@style/label_style" />
        </LinearLayout>
        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_number_required_label"
                style="@style/label_style"
                android:text="@string/ripples_required"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="406dp" />

            <TextView
                android:id="@+id/no_required_ripple_text"
                style="@style/label_style"/>
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_type_label"
                style="@style/label_style"
                android:text="@string/type"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="539dp" />

            <TextView
                android:id="@+id/type_text"
                style="@style/label_style"/>
        </LinearLayout>


        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_status_label"
                style="@style/label_style"
                android:text="@string/status"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="117dp" />

            <TextView
                android:id="@+id/Status_text"
                style="@style/label_style"/>
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_credibility_lable"
                style="@style/label_style"
                android:text="@string/Credibility"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="468dp" />

            <TextView
                android:id="@+id/credibility_text"
                style="@style/label_style"/>
        </LinearLayout>
        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_reports_lable"
                style="@style/label_style"
                android:text="@string/Credibility"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="468dp" />

            <TextView
                android:id="@+id/reports_text"
                style="@style/label_style"/>
        </LinearLayout>
        <LinearLayout style="@style/linear_layout_style"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/read_details_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/details"
                />

            <TextView
                android:id="@+id/details_text"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_weight="3"
                android:paddingLeft="5dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                tools:text="lgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkg" />
        </LinearLayout>
        <LinearLayout style="@style/linear_layout_style"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/read_images_label"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/common_google_signin_btn_text_light">

                </ImageView>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/common_google_signin_btn_text_light">

                </ImageView>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/common_google_signin_btn_text_light">

                </ImageView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/boost_credibility_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boost_credibility" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/accept_quest_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Accept" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/report_spam_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/report_as_scam" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>